feat: Update login form to use email input and simplify authentication logic

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
-# Local Netlify folder
-.netlify
+# This file is intentionally left blank for this example, 
+# as the only line was the one to be removed.
+# In your project, you would simply delete the ".netlify" line.
